# allmaptout

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile  lefthook.yml  setup-template.sh
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  bacon.toml
backend/migrations/: 20240101000000_init.sql  20260104001740_create_guests.sql  20260104001741_create_admins.sql  20260104001742_create_invite_codes.sql  20260104001743_create_sessions.sql  20260104001744_create_events.sql  20260104001745_create_rsvps.sql  20260104001746_create_rsvp_attendees.sql  20260104001747_update_event_types.sql
backend/src/: config.rs  error.rs  events.rs  lib.rs  main.rs  rsvp.rs
backend/src/admin/: mod.rs
backend/src/auth/: mod.rs
backend/src/models/: mod.rs
backend/src/schemas/: mod.rs
frontend/: .dockerignore  Dockerfile  astro.config.mjs  eslint.config.js  kubb.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/: env.d.ts  middleware.ts
frontend/src/__tests__/: AdminLoginForm.test.ts  CodeInput.test.ts  DashboardStats.test.ts  EventsList.test.ts  LogoutButton.test.ts  errors.test.ts
frontend/src/api/: auth.ts  client.ts  errors.ts
frontend/src/components/: AdminLoginForm.svelte  CodeInput.svelte  DashboardStats.svelte  EventManager.svelte  EventsList.svelte  GuestManager.svelte  LogoutButton.svelte  RsvpForm.svelte  SettingsForm.svelte
frontend/src/kubb/: index.ts
frontend/src/kubb/hooks/: index.ts  useAdminLogin.ts  useChangePassword.ts  useCreateEvent.ts  useCreateGuest.ts  useDeleteEvent.ts  useDeleteGuest.ts  useGetDashboardStats.ts  useGetRsvpStatus.ts  useGetSession.ts  useHealth.ts  useListAdminEvents.ts  useListEvents.ts  useListGuests.ts  useLogout.ts  useRegenerateCode.ts  useSubmitRsvp.ts  useUpdateEvent.ts  useUpdateGuest.ts  useValidateCode.ts
frontend/src/kubb/schemas/: adminEventResponse.json  adminEventsListResponse.json  adminGuestResponse.json  adminGuestsListResponse.json  adminLoginRequest.json  adminLoginResponse.json  adminRsvpSummary.json  attendeeInput.json  attendeeResponse.json  changePasswordRequest.json  changePasswordResponse.json  createEventRequest.json  createGuestRequest.json  createGuestResponse.json  (+16 more)
frontend/src/layouts/: Layout.astro
frontend/src/pages/: events.astro  index.astro  rsvp.astro
k8s/: backend.yaml  cert-manager.yaml  frontend.yaml  ingress-tls.yaml.example  ingress.yaml
(+54 files in other folders)
