[package]
name = "allmaptout-backend"
version = "0.1.0"
edition = "2021"
default-run = "allmaptout-backend"

[[bin]]
name = "allmaptout-backend"
path = "src/main.rs"

[[bin]]
name = "openapi"
path = "src/bin/openapi.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
tower_governor = "0.4"
http = "1"

# Serialization & Validation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "tls-rustls", "uuid", "chrono"] }

# Auth
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
tower-cookies = "0.10"
hex = "0.4"

# Config & logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
axum-test = "16"
tokio = { version = "1", features = ["test-util"] }
